# falcor2

./: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  MCP.md  README.md  pyproject.toml  requirements-dev.txt  setup.bat  setup.py  setup.sh  vcpkg.json
src/falcor2/: CMakeLists.txt  falcor2.cpp  falcor2.h  falcor2.natvis  falcor2_pch.h
src/falcor2/core/: any.h  archive.cpp  archive.h  array_view.h  asset_resolver.cpp  asset_resolver.h  blob_cache.cpp  blob_cache.h  cursor_writer.h  enum.h  error.h  format.h  fwd.h  logger.h  macros.h  object.h  pack_file.cpp  pack_file.h  platform.cpp  platform.h  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp  properties.cpp  properties.h  python_interpreter.cpp  python_interpreter.h  reflected_object.cpp  reflected_object.h  reflection.h  signal.h  types.h  ustring.cpp  ustring.h
src/falcor2/denoisers/: dlss_g_feature.cpp  dlss_g_feature.h  dlss_g_feature_impl.h  dlss_g_featureimpl_cuda.cpp  dlss_g_featureimpl_d3d12.cpp  dlss_g_featureimpl_vulkan.cpp  dlss_rr_feature.cpp  dlss_rr_feature.h  dlss_rr_feature_impl.h  dlss_rr_featureimpl_cuda.cpp  dlss_rr_featureimpl_d3d12.cpp  dlss_rr_featureimpl_vulkan.cpp  dlss_sr_feature.cpp  dlss_sr_feature.h  dlss_sr_feature_impl.h  dlss_sr_featureimpl_cuda.cpp  dlss_sr_featureimpl_d3d12.cpp  dlss_sr_featureimpl_vulkan.cpp  ngx.cpp  ngx.h  ngx_impl.cpp  ngx_impl.h  ngx_impl_cuda.cpp  ngx_impl_d3d12.cpp  ngx_impl_vulkan.cpp  ngx_types.h  optix_denoiser.cpp  optix_denoiser.h  optix_types.h
src/falcor2/importers/: fwd.h  importer.cpp  importer.h  importer_collections.cpp  importer_collections.h  importer_edits.cpp  importer_edits.h  importer_types.cpp  importer_types.h  material_conversions.cpp  material_conversions.h  mikkt.cpp  mikkt.h
src/falcor2/render/: animation.cpp  animation.h  component.cpp  component.h  emissive_geometry_system.cpp  emissive_geometry_system.h  entity.cpp  entity.h  fwd.h  geometry.cpp  geometry.h  hit_group_policy.h  light_system.cpp  light_system.h  material.cpp  material.h  material_system.cpp  material_system.h  ray_tracing_setup.cpp  ray_tracing_setup.h  render_scene.cpp  render_scene.h  scene.cpp  scene.h  scene_globals.h  scene_import.cpp  scene_import.h  scene_object.cpp  scene_object.h  scene_options.h  scene_requirements.h  scene_system.cpp  scene_system.h  scene_update.cpp  scene_update.h  shared_scene_types.h  texture_manager.cpp  texture_manager.h  texture_manager_types.h  transform.cpp  (+1 more)
src/falcor2/ui/: camera_controller.cpp  camera_controller.h  fwd.h  property_editor.cpp  property_editor.h  scene_editor.cpp  scene_editor.h  scene_interaction_controller.cpp  scene_interaction_controller.h  scene_picker.cpp  scene_picker.h  selection_overlay.cpp  selection_overlay.h  widgets.cpp  widgets.h
src/falcor2/utils/: aabb.h  buffer_handle.cpp  buffer_handle.h  fnv_hash.h  idictionary.h  indexed_vector.h  managed_buffer.h  managed_vector.h  offset_allocator.cpp  offset_allocator.h  string_utils.h  typed_id.h
src/falcor2_ext/: CMakeLists.txt  falcor2_ext.cpp  falcor2_ext_pch.h  nanobind.h  nanobind_reflector.h  nbdictionary.h  py_doc.h
src/falcor2_ext/core/: any.cpp  any.h  asset_resolver.cpp  platform.cpp  properties.cpp  property_type_map.cpp  property_type_map.h  reflected_object.cpp  reflection.cpp  signal.cpp  signal.h
src/falcor2_ext/denoisers/: ngx.cpp  ngx_features.cpp  ngx_types.cpp  optix_denoiser.cpp  optix_types.cpp
src/falcor2_ext/importers/: gltf_importer.cpp  importer.cpp  importer_types.cpp  usd_importer.cpp
src/falcor2_ext/render/: materialx_codegen.cpp  mdl_discovery.cpp  mesh.cpp  python_scene_object.h  ray_tracing_setup.cpp  scene.cpp  texture_manager.cpp  transform.cpp
src/falcor2_ext/testing/: nanobind_reflector.cpp
src/falcor2_ext/ui/: camera_controller.cpp  scene_editor.cpp  scene_interaction_controller.cpp  scene_picker.cpp  selection_overlay.cpp  widgets.cpp
src/falcor2_ext/utils/: aabb.cpp  managed_buffer.cpp
tests/: CMakeLists.txt
tests/native/: falcor2_tests.cpp  testing.cpp  testing.h
tests/native/core/: test_archive.cpp  test_asset_resolver.cpp  test_blob_cache.cpp  test_macros.cpp  test_pack_file.cpp  test_platform.cpp  test_properties.cpp  test_python_interpreter.cpp  test_signal.cpp
tests/native/denoisers/: test_denoiser.cpp  test_ngx.cpp
tests/native/device/: test_device.cpp
tests/native/gltf_importer/: test_gltf_importer.cpp  test_sampler_info.cpp
tests/native/importers/: test_importer_animation.cpp  test_importer_edit_stream.cpp  test_mikkt_cache.cpp
tests/native/render/: test_animation.cpp  test_materials.cpp  test_scene.cpp  test_scene_object.cpp  test_static_curve_geometry.cpp
tests/native/ui/: test_property_layout.cpp
tests/native/usd_importer/: test_scope_materials_mx139_openpbr.usda  test_usd_importer.cpp
tests/native/utils/: test_offset_allocator.cpp
tests/python/: conftest.py  test_falcor2.py
tests/python/core/: test_asset_resolver.py  test_nanobind_reflector.py  test_properties.py  test_python_properties.py  test_python_property_descriptor.py  test_signal.py
tests/python/denoiser/: test_ngx_bindings.py  test_optix_denoiser.py
tests/python/editor/: test_tools.py
tests/python/examples/: test_render_material.py
tests/python/importers/: test_aabb_scene.py  test_gltfimporter.py  test_usdimporter.py  test_vertexstreams.py
tests/python/mcp/: test_bridge.py  test_config_resource.py  test_editor_bridge.py  test_offline_render.py
tests/python/minitracer/: test_render_scenes.images.json  test_render_scenes.py
tests/python/pathtracer/: test_accumulator_node.py  test_camera.py  test_dlss.py  test_guides.py  test_pathtracer.py  test_pipeline.py  test_render_node.py  test_tone_mapper.py
tests/python/pyscene/: test_importer_edit_stream.py  test_preview.py  test_pyscene_module.py
tests/python/render/: bsdf_tests.py  bsdf_tests.slang  python_material_sample.py  python_material_sample.slang  test_bsdfs.py  test_checker_material_example.py  test_light_system.py  test_scene.py  (+12 more)
(+527 files in other folders)
