[build-system]
requires = [
    "setuptools",
    "wheel",
    "cmake==3.31.6",
    "ninja",
    "typing_extensions",
    "libcst",
    "numpy>=1.26.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "falcor2"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = ["typing_extensions", "numpy>=1.26.0"]
authors = [
    { name = "Simon Kallweit", email = "skallweit@nvidia.com" },
    { name = "Chris Cummings", email = "chriscummings@nvidia.com" },
    { name = "Tomas Davidovic", email = "tdavidovic@nvidia.com" },
]
description = "Falcor2 render toolkit"
readme = "README.md"
license="Apache-2.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["falcor2*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.json"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc"]

[tool.black]
line-length = 100

[tool.pyright]
include = ["./src", "./tools"]
extraPaths = ["./external/slangpy"]
ignore = []
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportUnusedImport = "error"
reportMissingSuperCall = "error"
reportInvalidStringEscapeSequence = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "warning"
reportInvalidTypeForm = "warning"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselected by default)",
]
